--- a/app/globals.css
+++ b/app/globals.css
@@ -187,7 +187,7 @@
 
   /* view */
   .view-container {
-    @apply flex justify-end items-center mt-5 fixed bottom-3 right-3;
+    @apply flex justify-end items-center mt-5 fixed sm:bottom-[4.75rem] sm:right-[1.8rem] bottom-3;
   }
 
   .view-text {
